@@ -12,13 +12,14 @@ import nova.mjs.util.ElasticSearch.Document.*;
 import nova.mjs.util.ElasticSearch.Repository.*;
 import nova.mjs.util.ElasticSearch.SearchResponseDTO;
 import nova.mjs.util.ElasticSearch.SearchType;
+import org.springframework.data.domain.*;
 import org.springframework.data.elasticsearch.core.SearchHit;
+import org.springframework.data.elasticsearch.core.SearchHits;
 import org.springframework.stereotype.Service;
 
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -117,17 +118,21 @@ public class CombinedSearchService {
      *                 BROADCAST            명대뉴스(명대방송국)
      *                 MJU_CALENDER         학사일정
      *              )
-     * @param page 페이지 번호
-     * @param size 페이지 크기
      * @return 하이라이트 포함된 검색 결과 리스트
      */
-    public List<SearchResponseDTO> unifiedSearch(String keyword, String type, int page, int size) {
+    public Page<SearchResponseDTO> unifiedSearch(String keyword, String type, String order, Pageable pageable) {
         SearchType searchType = SearchType.from(type);
 
-        return searchRepository.search(keyword, searchType, page, size)
-                .getSearchHits().stream()
-                .map(searchHit -> convertToDTO((SearchHit<SearchDocument>) searchHit))
-                .collect(Collectors.toList());
+        SearchHits<? extends SearchDocument> hits =
+                searchRepository.search(keyword, searchType, order, pageable);
+
+        long total = hits.getTotalHits();
+
+        List<SearchResponseDTO> content = hits.getSearchHits().stream()
+                .map(sh -> convertToDTO((SearchHit<SearchDocument>) sh))
+                .toList();
+
+        return new PageImpl<>(content, pageable, total);
     }
 
     /**
@@ -154,17 +159,19 @@ public class CombinedSearchService {
         );
     }
 
-    public Map<String, List<SearchResponseDTO>> searchTop5EachType(String keyword) {
+    public Map<String, List<SearchResponseDTO>> searchTop5EachType(String keyword, String order) {
         Map<String, List<SearchResponseDTO>> result = new LinkedHashMap<>();
 
+        Pageable top5 = PageRequest.of(0, 5);
+
         // 순서 : 공지사항 > 학사 일정(미정) > 학과 공지 > 학과 스케줄 > 자유게시판 > 명대신문 > 방송
-        result.put("notice", unifiedSearch(keyword, "NOTICE", 0, 5));
-        result.put("mjuCalendar", unifiedSearch(keyword, "MJU_CALENDAR", 0, 5));
-        result.put("departmentSchedule", unifiedSearch(keyword, "DEPARTMENT_SCHEDULE", 0, 5));
-        result.put("departmentNotice", unifiedSearch(keyword, "DEPARTMENT_NOTICE", 0, 5));
-        result.put("community", unifiedSearch(keyword, "COMMUNITY", 0, 5));
-        result.put("news", unifiedSearch(keyword, "NEWS", 0, 5));
-        result.put("broadcast", unifiedSearch(keyword, "BROADCAST", 0, 5));
+        result.put("notice",             unifiedSearch(keyword, "NOTICE",              order, top5).getContent());
+        result.put("mjuCalendar",        unifiedSearch(keyword, "MJU_CALENDAR",        order, top5).getContent());
+        result.put("departmentNotice",   unifiedSearch(keyword, "DEPARTMENT_NOTICE",   order, top5).getContent());
+        result.put("departmentSchedule", unifiedSearch(keyword, "DEPARTMENT_SCHEDULE", order, top5).getContent());
+        result.put("community",          unifiedSearch(keyword, "COMMUNITY",           order, top5).getContent());
+        result.put("news",               unifiedSearch(keyword, "NEWS",                order, top5).getContent());
+        result.put("broadcast",          unifiedSearch(keyword, "BROADCAST",           order, top5).getContent());
 
         return result;
     }
